[package]
name = "screeps-rust-trials"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies]
stdweb = "0.4"
log = "0.4"
fern = "0.6"
screeps-game-api = "0.9"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
#console_error_panic_hook = "0.1.7"


[profile.release]
panic = "abort"
opt-level = "s"
lto = true
